@@ -384,7 +384,7 @@ module Gem
       raise Gem::Exception, msg
     end
 
-    File.join(spec.full_gem_path, spec.bindir, exec_name).sub(/.*\s.*/m, '"\&"')
+    File.join(spec.full_gem_path, spec.bindir, exec_name)
   end
 
   ##
